# kemonotify

./: .gitignore  Kemonotify.py  README.md  config.json  main.py  requirements.txt
cli/: requirements.txt
tauri_gui/: commands.txt  tailwind.config.js
tauri_gui/scripts/: esl.ps1  fmt.ps1  rfmt.ps1  tailwind.ps1
tauri_gui/src/: index.html  main.js  package-lock.json  package.json  styles.css
tauri_gui/src-tauri/: Cargo.toml  tauri.conf.json
tauri_gui/src-tauri/icons/: icon.icns
tauri_gui/src-tauri/src/: main.rs
tauri_gui/src/css/: styles.css
tkinter_gui/: main.py  main.pyw  requirements.txt
